maze.lessons.maze.island.IslandMaze.scala.error
Escaper:25: error: ';' expected but ')' found.
 while (!estFaceMur()) avance())
                               ^